--- a/1se.html
+++ b/1se.html
@@ -1,121 +1,102 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-143926079-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-143926079-1');
+</script>
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/stylesheet/style.min.css">
-
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/pygments/default.min.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/solid.css">
-
-
-
-
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-
-
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#333333">
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#333333">
-    <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- Microsoft EDGE -->
-    <meta name="msapplication-TileColor" content="#333333">
-
-<meta name="author" content="Anders Rye Jacobsen" />
-<meta name="description" content="What I learned through documenting a year of my life in 1 second video snippets." />
-<meta name="keywords" content="student-life, traveling, diary">
-
-<meta property="og:site_name" content="Anders' Blog"/>
-<meta property="og:title" content="Documenting my life in 1-second video-snippets"/>
-<meta property="og:description" content="What I learned through documenting a year of my life in 1 second video snippets."/>
-<meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://ismand95.github.io/1se.html"/>
-<meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2019-07-09 12:28:00+02:00"/>
-<meta property="article:modified_time" content="2019-07-09 12:28:00+02:00"/>
-<meta property="article:author" content="https://ismand95.github.io/author/anders-rye-jacobsen.html">
-<meta property="article:section" content="Lifestyle"/>
-<meta property="article:tag" content="student-life"/>
-<meta property="article:tag" content="traveling"/>
-<meta property="article:tag" content="diary"/>
-<meta property="og:image" content="">
-
-  <title>Anders' Blog &ndash; Documenting my life in 1-second video-snippets</title>
-
-</head>
+<meta charset="utf-8"/>
+<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+<meta content="True" name="HandheldFriendly"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="" name="robots"/>
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet"/>
+<link href="https://ismand95.github.io/theme/stylesheet/style.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/pygments/default.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/brands.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/solid.css" rel="stylesheet" type="text/css"/>
+<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/images/favicon.ico" rel="icon" type="image/x-icon"/>
+<!-- Chrome, Firefox OS and Opera -->
+<meta content="#333333" name="theme-color"/>
+<!-- Windows Phone -->
+<meta content="#333333" name="msapplication-navbutton-color"/>
+<!-- iOS Safari -->
+<meta content="yes" name="apple-mobile-web-app-capable"/>
+<meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+<!-- Microsoft EDGE -->
+<meta content="#333333" name="msapplication-TileColor"/>
+<meta content="Anders Rye Jacobsen" name="author">
+<meta content="What I learned through documenting a year of my life in 1 second video snippets." name="description">
+<meta content="student-life, traveling, diary" name="keywords"/>
+<meta content="Anders' Blog" property="og:site_name">
+<meta content="Documenting my life in 1-second video-snippets" property="og:title">
+<meta content="What I learned through documenting a year of my life in 1 second video snippets." property="og:description">
+<meta content="en_US" property="og:locale">
+<meta content="https://ismand95.github.io/1se.html" property="og:url"/>
+<meta content="article" property="og:type"/>
+<meta content="2019-07-09 12:28:00+02:00" property="article:published_time"/>
+<meta content="2019-07-09 12:28:00+02:00" property="article:modified_time"/>
+<meta content="https://ismand95.github.io/author/anders-rye-jacobsen.html" property="article:author"/>
+<meta content="Lifestyle" property="article:section">
+<meta content="student-life" property="article:tag"/>
+<meta content="traveling" property="article:tag"/>
+<meta content="diary" property="article:tag"/>
+<meta content="" property="og:image"/>
+<title>Anders' Blog – Documenting my life in 1-second video-snippets</title>
+</meta></meta></meta></meta></meta></meta></meta></head>
 <body>
-  <aside>
-    <div>
-      <a href="https://ismand95.github.io">
-        <img src="https://ismand95.github.io/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
-      </a>
-      <h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
-
-<p><br>Economics student who loves everything<br> technology, coding and data-science related</p>
-      <nav>
-        <ul class="list">
-          <li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
-          <li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
-
-        </ul>
-      </nav>
-
-      <ul class="social">
-          <li>
-            <a  class="sc-linkedin" href="https://linkedin.com/in/anders-rye-jacobsen" target="_blank">
-            <i class="fab fa-linkedin">
-            </i>
-          </a></li>
-          <li>
-            <a  class="sc-github" href="https://github.com/ismand95" target="_blank">
-            <i class="fab fa-github">
-            </i>
-          </a></li>
-      </ul>
-    </div>
-
-
-  </aside>
-  <main>
-
-    <nav>
-      <a href="https://ismand95.github.io">    Home
+<aside>
+<div>
+<a href="https://ismand95.github.io">
+<img alt="Anders Rye Jacobsen" src="https://ismand95.github.io/theme/img/profile.png" title="Anders Rye Jacobsen"/>
 </a>
-
-      <a href="/archives">Archive</a>
-      <a href="/categories">Categories</a>
-
-
-    </nav>
-
+<h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
+<p><br/>Economics student who loves everything<br/> technology, coding and data-science related</p>
+<nav>
+<ul class="list">
+<li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
+<li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
+</ul>
+</nav>
+<ul class="social">
+<li>
+<a class="sc-linkedin" href="https://linkedin.com/in/anders-rye-jacobsen" target="_blank">
+<i class="fab fa-linkedin">
+</i>
+</a></li>
+<li>
+<a class="sc-github" href="https://github.com/ismand95" target="_blank">
+<i class="fab fa-github">
+</i>
+</a></li>
+</ul>
+</div>
+</aside>
+<main>
+<nav>
+<a href="https://ismand95.github.io">    Home
+</a>
+<a href="/archives">Archive</a>
+<a href="/categories">Categories</a>
+</nav>
 <article class="single">
-  <header>
-      
-    <h1 id="1se">Documenting my life in 1-second video-snippets</h1>
-    <p>
+<header>
+<h1 id="1se">Documenting my life in 1-second video-snippets</h1>
+<p>
           Posted on Tue 09 July 2019 in <a href="https://ismand95.github.io/category/lifestyle.html">Lifestyle</a>
-
-
-    </p>
-  </header>
-
-
-  <div>
-    <hr>
-
+</p>
+</header>
+<div>
+<hr/>
 <p>Exactly one year ago, I got to feel the ground of my home country beneath my feet after
 a few months of backpacking Central America. I returned home with immense energy and a 
 longing for new and exciting opportunities.</p>
@@ -152,35 +133,24 @@ I believe it is such a gift to be able to reflect in retrospect and see the smil
 helped make the last year absolutely unforgettable. </p>
 <p>Well... enough introduction I guess - I hope you enjoy the video and that it may inspire some of you to video-document your own life.</p>
 <p>I really can't watch it without an immense smile on my face while I reflect upon all the amazing moments this last year brought to me.</p>
-<div style="text-align:center" class="youtube youtube-16x9">
-<iframe src="https://www.youtube.com/embed/VpY9DYPkTH4" allowfullscreen seamless width="600" height="450" frameBorder="0"></iframe>
+<div class="youtube youtube-16x9" style="text-align:center">
+<iframe allowfullscreen="" frameborder="0" height="450" seamless="" src="https://www.youtube.com/embed/VpY9DYPkTH4" width="600"></iframe>
 </div>
-
 <p><i> Disclaimer: If you're in the video and don't like it being online please do contact me </i></p>
-  </div>
-  <div class="tag-cloud">
-    <p>
-      <a href="https://ismand95.github.io/tag/student-life.html">student-life</a>
-      <a href="https://ismand95.github.io/tag/traveling.html">traveling</a>
-      <a href="https://ismand95.github.io/tag/diary.html">diary</a>
-    </p>
-  </div>
-
-
-
-
-
+</div>
+<div class="tag-cloud">
+<p>
+<a href="https://ismand95.github.io/tag/student-life.html">student-life</a>
+<a href="https://ismand95.github.io/tag/traveling.html">traveling</a>
+<a href="https://ismand95.github.io/tag/diary.html">diary</a>
+</p>
+</div>
 </article>
-
-    <footer>
-<p>&copy;  Anders Rye Jacobsen 2019</p>
+<footer>
+<p>©  Anders Rye Jacobsen 2019</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
-</p>    </footer>
-  </main>
-
-
-
-
+</p> </footer>
+</main>
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
@@ -191,6 +161,5 @@ helped make the last year absolutely unforgettable. </p>
   "description": "My thoughts and writings about technology, data-science, life and everything in between"
 }
 </script>
-
 </body>
 </html>
