--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,126 +1,108 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-143926079-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-143926079-1');
+</script>
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/stylesheet/style.min.css">
-
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/pygments/default.min.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/solid.css">
-
-
-
-
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-
-
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#333333">
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#333333">
-    <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- Microsoft EDGE -->
-    <meta name="msapplication-TileColor" content="#333333">
-
-    <meta name="author" content="Anders Rye Jacobsen" />
-    <meta name="description" content="My thoughts and writings about technology, data-science, life and everything in between" />
-<meta property="og:site_name" content="Anders' Blog"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="Anders' Blog"/>
-<meta property="og:description" content="My thoughts and writings about technology, data-science, life and everything in between"/>
-<meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://ismand95.github.io"/>
-
-  <title>Anders' Blog &ndash; Contact</title>
-
-</head>
+<meta charset="utf-8"/>
+<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+<meta content="True" name="HandheldFriendly"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="" name="robots"/>
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet"/>
+<link href="https://ismand95.github.io/theme/stylesheet/style.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/pygments/default.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/brands.css" rel="stylesheet" type="text/css"/>
+<link href="https://ismand95.github.io/theme/font-awesome/css/solid.css" rel="stylesheet" type="text/css"/>
+<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/images/favicon.ico" rel="icon" type="image/x-icon"/>
+<!-- Chrome, Firefox OS and Opera -->
+<meta content="#333333" name="theme-color"/>
+<!-- Windows Phone -->
+<meta content="#333333" name="msapplication-navbutton-color"/>
+<!-- iOS Safari -->
+<meta content="yes" name="apple-mobile-web-app-capable"/>
+<meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+<!-- Microsoft EDGE -->
+<meta content="#333333" name="msapplication-TileColor"/>
+<meta content="Anders Rye Jacobsen" name="author">
+<meta content="My thoughts and writings about technology, data-science, life and everything in between" name="description">
+<meta content="Anders' Blog" property="og:site_name">
+<meta content="blog" property="og:type">
+<meta content="Anders' Blog" property="og:title">
+<meta content="My thoughts and writings about technology, data-science, life and everything in between" property="og:description"/>
+<meta content="en_US" property="og:locale"/>
+<meta content="https://ismand95.github.io" property="og:url"/>
+<title>Anders' Blog – Contact</title>
+</meta></meta></meta></meta></meta></head>
 <body>
-  <aside>
-    <div>
-      <a href="https://ismand95.github.io">
-        <img src="https://ismand95.github.io/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
-      </a>
-      <h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
-
-<p><br>Economics student who loves everything<br> technology, coding and data-science related</p>
-      <nav>
-        <ul class="list">
-          <li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
-          <li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
-
-        </ul>
-      </nav>
-
-      <ul class="social">
-          <li>
-            <a  class="sc-linkedin" href="https://linkedin.com/in/anders-rye-jacobsen" target="_blank">
-            <i class="fab fa-linkedin">
-            </i>
-          </a></li>
-          <li>
-            <a  class="sc-github" href="https://github.com/ismand95" target="_blank">
-            <i class="fab fa-github">
-            </i>
-          </a></li>
-      </ul>
-    </div>
-
-
-  </aside>
-  <main>
-
-    <nav>
-      <a href="https://ismand95.github.io">    Home
+<aside>
+<div>
+<a href="https://ismand95.github.io">
+<img alt="Anders Rye Jacobsen" src="https://ismand95.github.io/theme/img/profile.png" title="Anders Rye Jacobsen"/>
 </a>
-
-      <a href="/archives">Archive</a>
-      <a href="/categories">Categories</a>
-
-
-    </nav>
-
+<h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
+<p><br/>Economics student who loves everything<br/> technology, coding and data-science related</p>
+<nav>
+<ul class="list">
+<li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
+<li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
+</ul>
+</nav>
+<ul class="social">
+<li>
+<a class="sc-linkedin" href="https://linkedin.com/in/anders-rye-jacobsen" target="_blank">
+<i class="fab fa-linkedin">
+</i>
+</a></li>
+<li>
+<a class="sc-github" href="https://github.com/ismand95" target="_blank">
+<i class="fab fa-github">
+</i>
+</a></li>
+</ul>
+</div>
+</aside>
+<main>
+<nav>
+<a href="https://ismand95.github.io">    Home
+</a>
+<a href="/archives">Archive</a>
+<a href="/categories">Categories</a>
+</nav>
 <article class="single">
-  <header>
-    
-    <h1 id="contact">Contact</h1>
-  </header>
-  <div>
+<header>
+<h1 id="contact">Contact</h1>
+</header>
+<div>
 <p>If you're interested in my work or you just have a question or comment, please feel free to contact me anytime.
-<br>
-<br></p>
+<br/>
+<br/></p>
 <ul>
 <li>Name: Anders Rye Jacobsen</li>
 <li>Location: Aarhus, Denmark</li>
 </ul>
-<p><br></p>
+<p><br/></p>
 <ul>
-<li>e-mail: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#97;&#110;&#100;&#101;&#114;&#115;&#114;&#121;&#101;&#46;&#106;&#97;&#99;&#111;&#98;&#115;&#101;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#97;&#110;&#100;&#101;&#114;&#115;&#114;&#121;&#101;&#46;&#106;&#97;&#99;&#111;&#98;&#115;&#101;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></li>
+<li>e-mail: <a href="mailto:andersrye.jacobsen@gmail.com">andersrye.jacobsen@gmail.com</a></li>
 <li><a href="https://linkedin.com/in/anders-rye-jacobsen">LinkedIn</a></li>
 <li><a href="https://github.com/ismand95">GitHub</a></li>
-</ul>  </div>
+</ul> </div>
 </article>
-
-    <footer>
-<p>&copy;  Anders Rye Jacobsen 2019</p>
+<footer>
+<p>©  Anders Rye Jacobsen 2019</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
-</p>    </footer>
-  </main>
-
-
-
-
+</p> </footer>
+</main>
 <script type="application/ld+json">
 {
   "@context" : "http://schema.org",
@@ -131,6 +113,5 @@
   "description": "My thoughts and writings about technology, data-science, life and everything in between"
 }
 </script>
-
 </body>
 </html>
